Fix image removal on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ a:active {
     width: 100%;
 }
 
-.main__content div:nth-child(4) {
+.main__content div:nth-child(2) {
     display: none;
 }
 
